<resources>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="a00001">场景开关</string>
    <string name="a00002">安防开关</string>
    <string name="a00003">锁</string>
    <string name="a00004">温控器</string>
    <string name="a50205">无线无源温度传感器</string>
    <string name="a50402">无线无源温湿度传感器</string>
    <string name="a50802">无线人体红外传感器</string>
    <string name="a50902">无线无源一氧化碳传感器</string>
    <string name="a50904">无线无源二氧化碳传感器</string>
    <string name="a51105">多功能双路执行器</string>
    <string name="a51106">多功能窗帘执行器</string>
    <string name="about_alarm_sound_mode">探测器或紧急按钮发送报警时，会发出声音提醒</string>
    <string name="about_app_right">Copyright©2016 WinShine. All rights reserved.</string>
    <string name="about_title">关于</string>
    <string name="about_version">版本:  %s</string>
    <string name="account_new_password">新密码</string>
    <string name="account_new_password_confirm">确认密码</string>
    <string name="account_setting_new_password">设置新密码</string>
    <string name="account_tip_check_password_first">请先验证密码</string>
    <string name="account_tip_password_error_try">密码输入错误，请重试</string>
    <string name="account_tip_please_input_password">请输入该账号的密码</string>
    <string name="account_tip_two_different">两次输入不相同，请重新输入</string>
    <string name="account_toast_password_change_ok">密码修改成功,请重新登录</string>
    <string name="action_settings">Settings</string>
    <string name="add_camera_fail_network_exception">添加失败，请检查您的网络</string>
    <string name="add_camera_fail_server_exception">操作失败</string>
    <string name="add_camera_success_tip">你可以在电脑上登录i.ys7.com，在“我的店铺”里开启Wi-Fi营销了</string>
    <string name="add_device">添加设备</string>
    <string name="add_device_active_banding">设备已经被网关%s添加了</string>
    <string name="add_device_active_end_device_text">获得一个%s</string>
    <string name="add_device_active_end_icon_hint">请选择类型</string>
    <string name="add_device_active_end_icon_tip">请选择图标</string>
    <string name="add_device_active_gate_tip1">正在激活网关进入添加模式</string>
    <string name="add_device_active_gate_tip2">请等待</string>
    <string name="add_device_active_gate_tip3">请确保终端与网关连接同一个WI-FI信号。添加设备需要使网关进入学习模式，当网关EnOcean指示灯长亮时，即成功进入学习模式。</string>
    <string name="add_device_active_learn_tip">请按执行器或者传感器按钮，学习成功后，将收到设备添加成功的推送消息。</string>
    <string name="add_device_active_learn_tip_timeout">设备添加超时，请返回并刷新界面查看设备是否添加成功，或选择重试。</string>
    <string name="add_device_discover">发现添加</string>
    <string name="add_device_fail">添加设备失败</string>
    <string name="add_device_fail_network_exception">添加设备失败，请检查您的网络</string>
    <string name="add_device_failed_not_online">Wi-Fi配置成功、绑定账号失败，请重试</string>
    <string name="add_device_guide_ready">进入学习模式</string>
    <string name="add_device_input">输入添加</string>
    <string name="add_device_scan">扫一扫添加</string>
    <string name="add_device_success">添加设备成功</string>
    <string name="add_scene_switch_scan">扫描二维码</string>
    <string name="add_scene_switch_scan_check">校验</string>
    <string name="add_scene_switch_scan_check_lock_tip_click_btn">添加成功后，请在菜单选择“门锁绑定网关”继续下一步流程</string>
    <string name="add_scene_switch_scan_check_nok">二维码不正确，请重新扫描</string>
    <string name="add_scene_switch_scan_check_security_tip_click_btn">添加成功后，请手按 安防开关 按键</string>
    <string name="add_scene_switch_scan_check_tip">场景开关</string>
    <string name="add_scene_switch_scan_check_tip_click_btn">添加成功后，请手按 场景开关 按键</string>
    <string name="add_scene_switch_scan_check_tmp_tip_click_btn">添加成功后，请手按 温控器 按键</string>
    <string name="add_scene_switch_scan_lock_check_tip">锁</string>
    <string name="add_scene_switch_scan_security_check_tip">安防开关</string>
    <string name="add_scene_switch_scan_tmp_check_tip">温控器</string>
    <string name="added_by_me">已添加</string>
    <string name="added_by_other">被添加</string>
    <string name="added_camera_psw_fail_title_txt">您输入的密码不正确，请重新输入</string>
    <string name="added_camera_success_txt">添加成功</string>
    <string name="added_camera_txt">你已经添加过此设备</string>
    <string name="added_camera_verycode_fail_title_txt">您输入的验证码不正确，请重新输入</string>
    <string name="agree">同意</string>
    <string name="alarm_message_check_fail">消息标记失败</string>
    <string name="alarm_message_check_fail_network_exception">消息标记失败，请检查您的网络</string>
    <string name="alarm_message_del_fail_network_exception">删除失败，请检查您的网络</string>
    <string name="alarm_message_del_fail_txt">删除失败</string>
    <string name="alarm_message_del_success_txt">删除成功</string>
    <string name="alarm_setted_close_success">关闭成功</string>
    <string name="alarm_setted_success">开启成功</string>
    <string name="alarm_sound_mode">报警声音</string>
    <string name="alarm_type_baby_cry">发生婴儿啼哭报警</string>
    <string name="alarm_type_door">发生门磁报警</string>
    <string name="alarm_type_gas">发生可燃气体报警</string>
    <string name="alarm_type_infrared">发生人体感应事件</string>
    <string name="alarm_type_motion_detection">发生移动侦测报警</string>
    <string name="alarm_type_person_alarm">发生人体感应报警</string>
    <string name="alarm_type_remotecontrol">发生紧急遥控按钮事件</string>
    <string name="alarm_type_smoke">发生烟感报警</string>
    <string name="alarm_type_unknown">发生未知类型报警</string>
    <string name="alarm_type_urgent_button">发生紧急按钮报警</string>
    <string name="alarm_type_water">发生水侵报警</string>
    <string name="already_reset">复位好了</string>
    <string name="already_saved_to_volume">已保存至相册</string>
    <string name="am">上午</string>
    <string name="and">并且（全部都满足）</string>
    <string name="aotu_wifi_add_device_success">恭喜您，添加成功 ！</string>
    <string name="app_name">Demo</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auto_play_time">%s秒钟后为你自动播放下一段视频</string>
    <string name="auto_relate_security_no">否，稍后手动关联</string>
    <string name="auto_wifi_net">网络</string>
    <string name="auto_wifi_ssid">ssid</string>
    <string name="device_unsupport_5g_wifi">如果你使用的是双频路由器，请不要让摄像机连接5G频段的Wi-Fi</string>
    <string name="ez_serial_add_hint">设备机身上的9位序列号</string>
    <string name="gateway_info_brand">品牌</string>
    <string name="gateway_info_brand_content">WinShine</string>
    <string name="gateway_info_manid">生产厂商</string>
    <string name="gateway_info_manid_content">Nanjing WinShine Network Technology Co., Ltd.</string>
    <string name="gateway_info_type">型号</string>
    <string name="gateway_info_type_content">LD-Gateway</string>
    <string name="login_password_tv_txt">密码</string>
    <string name="next_button_txt">下一步</string>
    <string name="no_result_text">没有查询到结果</string>
    <string name="please_connect_the_power">添加时，请确保你的设备已连接好电源</string>
    <string name="probe_not_support_tip">不支持序列号添加探测器哦～</string>
    <string name="promptUserToActivate">非萤石设备请先激活设备 >></string>
    <string name="quality_balanced">均衡</string>
    <string name="quality_flunet">流畅</string>
    <string name="quality_hd">高清</string>
    <string name="querying_camera_text">正在查询设备信息，请稍等...</string>
    <string name="refresh">重试</string>
    <string name="scan_add">添加</string>
    <string name="scan_connet_network">连接网络</string>
    <string name="scan_network_unavailible">尚未连接好网络</string>
    <string name="select_net_title">选择连接方式</string>
    <string name="select_net_wired">有线连接</string>
    <string name="select_net_wired_tip">网关与路由器通过网线连接</string>
    <string name="select_net_wireless">无线连接</string>
    <string name="select_net_wireless_tip">网关与路由器通过无线连接</string>
    <string name="unbind_to_bind">解绑添加</string>
    <string name="wireless_configure_hint">请切换到wifi</string>
    <string name="wireless_configure_password_hint">请输入密码</string>
    <string name="wireless_configure_start">开始配置</string>
    <string name="wireless_configure_tip">请选择2.4G频段WI-FI,让网关接入网络</string>
    <string name="wireless_configure_tip_wifi">请确认网关进入了配置模式</string>
    <string name="wireless_configure_title">配置网络</string>
</resources>