<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/application_bg" android:paddingBottom="@dimen/padding_twenty" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/view_common_top_title_layout" />
    <LinearLayout android:orientation="vertical" android:id="@id/inputLinearlayout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:layout_weight="1.0">
        <RelativeLayout android:id="@id/searchEditTextContainer" android:background="@color/white" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip">
            <EditText android:textSize="@dimen/tab_text_size" android:textColor="@color/gray_text" android:textColorHint="@color/gray" android:id="@id/seriesNumberEt" android:background="@color/transparent" android:paddingLeft="5.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/ez_serial_add_hint" android:singleLine="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:inputType="number" />
        </RelativeLayout>
        <View android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <Button android:textSize="@dimen/common_fontsize_large" android:textColor="@color/white" android:id="@id/searchBtn" android:background="@drawable/common_btn_square_blue_selector" android:layout_width="fill_parent" android:layout_height="@dimen/btn_common_height" android:layout_margin="@dimen/padding_five" android:layout_marginTop="40.0dip" android:scaleType="fitCenter" android:text="@string/next_button_txt" android:onClick="onClick" style="?android:attr/borderlessButtonStyle" />
        <TextView android:textSize="@dimen/device_set_text_size" android:textColor="@color/setting_hint_text" android:gravity="center" android:background="@color/common_bg" android:paddingLeft="@dimen/device_set_padding" android:paddingTop="@dimen/device_set_text_padding" android:paddingRight="@dimen/device_set_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/probe_not_support_tip" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/cameraListLy" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <RelativeLayout android:background="@drawable/results_pic_bg" android:layout_width="175.0dip" android:layout_height="165.0dip" android:layout_marginTop="50.0dip">
            <ImageView android:id="@id/deviceIcon" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/results_pic_default" android:scaleType="fitXY" android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/loading_text_size" android:textColor="@color/common_text" android:id="@id/deviceName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="" />
        <TextView android:textSize="@dimen/loading_text_size" android:textColor="@color/common_text" android:id="@id/tvStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/scan_network_unavailible" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/content_text_size" android:textColor="@color/auto_tip_text" android:id="@id/connectTip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/please_connect_the_power" />
        <Button android:textSize="@dimen/common_fontsize_large" android:textColor="@color/white" android:id="@id/btnNext" android:background="@drawable/common_btn_square_blue_selector" android:layout_width="fill_parent" android:layout_height="@dimen/btn_common_height" android:layout_margin="@dimen/padding_five" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/scan_connet_network" />
        <Button android:textSize="@dimen/common_fontsize_large" android:textColor="@color/white" android:gravity="center" android:id="@id/unbind_button" android:background="@drawable/common_btn_square_blue_selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/btn_common_height" android:layout_margin="@dimen/padding_five" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/unbind_to_bind" />
        <TextView android:textColor="#ff1b9ee2" android:gravity="center" android:id="@id/activateHint" android:background="@drawable/btn_white_selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="17.299988dip" android:layout_marginRight="10.0dip" android:text="@string/promptUserToActivate" />
        <Button android:textSize="@dimen/common_fontsize_large" android:textColor="@color/white" android:id="@id/addBtn" android:background="@drawable/common_btn_square_blue_selector" android:layout_width="fill_parent" android:layout_height="@dimen/btn_common_height" android:layout_margin="@dimen/padding_five" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/scan_add" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/errorPage" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/padding_five" android:layout_weight="1.0">
        <TextView android:textSize="@dimen/assistant_text_size" android:textColor="@color/black_text" android:gravity="center" android:id="@id/failedMsg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_result_text" android:layout_weight="1.0" />
        <Button android:textSize="@dimen/common_fontsize_large" android:textColor="@color/white" android:id="@id/myRetry" android:background="@drawable/common_btn_square_blue_selector" android:layout_width="fill_parent" android:layout_height="@dimen/btn_common_height" android:layout_marginTop="20.0dip" android:text="@string/refresh" android:onClick="onClick" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/queryingCameraRyt" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <ImageView android:id="@id/searchAnim" android:background="@anim/device_search_bg" android:layout_width="150.0dip" android:layout_height="165.0dip" android:layout_marginTop="35.0dip" />
        <TextView android:textSize="@dimen/loading_text_size" android:textColor="@color/gray_text" android:gravity="center" android:id="@id/querying_camera_tv" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/querying_camera_text" />
    </LinearLayout>
</LinearLayout>