<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/common_bg_color" android:paddingBottom="@dimen/padding_twenty" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/view_common_top_title_layout" />
    <TextView android:textSize="@dimen/common_fontsize_xlarge" android:textColor="@color/config_gate_title_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_thirty" android:text="@string/select_net_title" />
    <Button android:textSize="@dimen/common_fontsize_large" android:textColor="@color/white" android:gravity="center" android:id="@id/select_net_wired" android:background="@drawable/common_btn_square_blue_selector" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/btn_common_height" android:layout_marginLeft="@dimen/select_net_wired_padding" android:layout_marginTop="@dimen/select_net_wired_padding" android:layout_marginRight="@dimen/select_net_wired_padding" android:text="@string/select_net_wired" style="?android:attr/borderlessButtonStyle" />
    <TextView android:textSize="@dimen/common_fontsize_large" android:textColor="@color/guide_bar_text_color" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/select_net_wired_padding" android:layout_marginRight="@dimen/select_net_wired_padding" android:layout_marginBottom="@dimen/padding_twenty" android:text="@string/select_net_wired_tip" />
    <Button android:textSize="@dimen/common_fontsize_large" android:textColor="@color/white" android:gravity="center" android:id="@id/select_net_wireless" android:background="@drawable/common_btn_square_blue_selector" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/btn_common_height" android:layout_marginLeft="@dimen/select_net_wired_padding" android:layout_marginTop="@dimen/select_net_wired_padding" android:layout_marginRight="@dimen/select_net_wired_padding" android:text="@string/select_net_wireless" style="?android:attr/borderlessButtonStyle" />
    <TextView android:textSize="@dimen/common_fontsize_large" android:textColor="@color/guide_bar_text_color" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/select_net_wired_padding" android:layout_marginRight="@dimen/select_net_wired_padding" android:layout_marginBottom="@dimen/padding_twenty" android:text="@string/select_net_wireless_tip" />
</LinearLayout>