<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/common_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.potevio.easyhome.client.ui.widget.TitleWidget android:id="@id/title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15.0sp" android:textColor="@color/common_text" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_unsupport_5g_wifi" />
        <LinearLayout android:background="@color/white" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/common_text" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/auto_wifi_net" />
            <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/common_text" android:id="@id/tvSSID" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:hint="@string/auto_wifi_ssid" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:background="@color/white" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/common_text" android:id="@id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_password_tv_txt" />
            <EditText android:textSize="@dimen/title_text_size" android:textColor="@color/common_text" android:id="@id/edtPassword" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:ems="10" android:singleLine="true" android:maxLength="64" android:layout_weight="1.0" android:inputType="text" />
        </LinearLayout>
        <Button android:textSize="@dimen/tab_text_size" android:textColor="@color/white" android:id="@id/btnNext" android:background="@drawable/common_btn_square_blue_selector" android:layout_width="fill_parent" android:layout_height="@dimen/btn_common_height" android:layout_marginTop="20.0dip" android:text="@string/next_button_txt" />
    </LinearLayout>
</LinearLayout>