<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/common_bg_color" android:paddingBottom="@dimen/padding_twenty" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/view_common_top_title_layout" />
    <TextView android:textSize="@dimen/common_fontsize_xlarge" android:textColor="@color/config_gate_title_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_fifteen" android:text="@string/wireless_configure_title" />
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:paddingLeft="@dimen/padding_five" android:paddingRight="@dimen/padding_five" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_fifteen">
        <TextView android:textSize="@dimen/common_fontsize_normal" android:textColor="@color/black" android:textColorHint="@color/gray" android:gravity="center" android:id="@id/wireless_configure_select" android:paddingLeft="@dimen/padding_fifteen" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/btn_common_height" android:hint="@string/wireless_configure_hint" android:singleLine="true" android:drawableRight="@drawable/arrow_right_bg" android:textIsSelectable="false" android:alpha="0.6" />
        <TextView android:background="@color/common_line_color" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="@dimen/line_common_height" />
        <EditText android:textSize="@dimen/common_fontsize_normal" android:textColor="@color/black" android:textColorHint="@color/gray" android:gravity="center" android:id="@id/select_net_wireless_password" android:background="@null" android:paddingLeft="@dimen/padding_ten" android:paddingRight="@dimen/padding_ten" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/btn_common_height" android:hint="@string/wireless_configure_password_hint" android:scrollHorizontally="true" android:singleLine="true" android:inputType="textPassword" android:alpha="0.6" android:textCursorDrawable="@null" />
    </LinearLayout>
    <TextView android:textSize="@dimen/common_fontsize_xlarge" android:textColor="@color/gray" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_fifteen" android:text="@string/wireless_configure_tip" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/common_fontsize_xlarge" android:textColor="@color/gray" android:layout_gravity="center" android:id="@id/wireless_configure_tip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_fifteen" android:text="@string/wireless_configure_tip_wifi" />
    <Button android:textSize="@dimen/common_fontsize_large" android:textColor="@color/white" android:gravity="center" android:id="@id/wireless_configure_start" android:background="@drawable/common_btn_square_blue_selector" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/btn_common_height" android:layout_marginLeft="@dimen/padding_five" android:layout_marginTop="@dimen/padding_fifteen" android:layout_marginRight="@dimen/padding_five" android:text="@string/wireless_configure_start" style="?android:attr/borderlessButtonStyle" />
</LinearLayout>